# bitnet-embed

./: .gitignore  Dockerfile  README.md  bitnet_embedding_sdd_full.md  pyproject.toml
.github/workflows/: ci.yml
bitnet_cpp/: README.md  feasibility.json
configs/data/: nq.yaml  (+7 more)
docs/: openapi.json  sdd.md
scripts/: benchmark_latency.py  benchmark_memory.py  common.py  compare_reports.py  confirm_finalists.py  eval_clustering.py  eval_mteb.py  eval_retrieval.py  eval_sts.py  export_hf_package.py  export_openapi.py  generate_reports.py  phase2_feasibility.py  run_api.py  run_autoresearch_search.py  run_search.py  run_stage_plan.py  run_training.py  train_full.py  train_head_only.py  train_lora.py  train_smoke.py  validate_ann.py
tests/: test_ann_validation.py  test_api.py  test_autoresearch_runner.py  test_backbone_loading.py  test_benchmark_reporting.py  test_bitnet_cpp_bridge.py  test_checkpoint_runtime.py  test_checkpoint_transfer.py  test_clustering_report.py  test_compare_reports.py  test_data_loaders.py  test_data_pipeline.py  test_eval_harness.py  test_experiment_ledger.py  test_external_runner.py  test_finalist_confirmation.py  test_hf_package.py  test_lora_targets.py  test_memory_reporting.py  test_model_forward.py  test_mteb_runner.py  test_mteb_wrapper.py  test_openapi.py  test_pooling.py  test_real_config_templates.py  test_report_bundle.py  test_search_runner.py  test_service_config.py  test_stage_plan.py  test_sts_report.py  test_train_workflow.py  test_trainer_resume.py  test_trainer_smoke.py  test_trainer_step_accounting.py  test_trainer_triplet.py
(+116 files in other folders)
