[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bitnet-embed"
version = "0.1.0"
description = "BitNet-based embedding model research and serving stack"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenCode" },
]
dependencies = [
  "accelerate>=1.11.0",
  "datasets>=4.1.0",
  "fastapi>=0.116.0",
  "mteb>=2.0.0",
  "numpy>=2.1.0",
  "orjson>=3.10.0",
  "peft>=0.17.0",
  "prometheus-client>=0.22.0",
  "pydantic>=2.11.0",
  "pyyaml>=6.0.2",
  "safetensors>=0.6.0",
  "scikit-learn>=1.7.0",
  "sentence-transformers>=5.1.0",
  "torch>=2.8.0",
  "transformers>=4.56.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "build>=1.3.0",
  "httpx>=0.28.1",
  "mypy>=1.18.2",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.0",
  "types-psutil>=7.0.0.20251001",
  "types-PyYAML>=6.0.12.20250915",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bitnet_embed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["datasets", "accelerate", "sklearn", "sklearn.*"]
ignore_missing_imports = true
